2002-06-05  Bastien Nocera  <hadess@hadess.net>

	* gdk-card-image.c: (gdk_card_deck_dir_search),
	(gdk_card_deck_file_load): make sure it works if freecell isn't
	installed in the libgnome prefix

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* gdk-card-image.c: (is_image): revert previous change about gnome-vfs
	and include gnome-vfs-mime.h header

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* gdk-card-image.c: (gdk_card_deck_get_type), (is_image):
	* gdk-card-image.h: fix headers and use proper gnome-vfs function,
	use a GtkType instead of a guint for gdk_card_get_type
	(Closes: #77902)

2001-12-16  Juan Pablo Mendoza <jpablo@gnome.org>

	* gdk-card-image.c: Fix bad formated comment.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gdk-card-image.c: Killed Imlib.

Tue Feb 06 16:51:19 2001  George Lebl <jirka@5z.com>

	* gdk-card-image.c: Deal with errors and missing files/directories
	  correctly.  Use gnome-mime instead of g_is_image_filename to
	  avoid warning.

1999-02-20  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (cardbackdir): limited the number of cards available
	for small and medium suit vals.
	* gdk-card-image.c: as above.
	(make_suit): remove small image from joker -- just 2 black jokers
	and 2 red jokers instead.

1998-12-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk-card-image.c (gdk_imlib_rotate_image_180): Small fix to the
	new imlib api.  This should not be poking with Imlib internals in
	the first place.

Sat Nov 21 Felix Bellaby <felix@pooh.u-net.com>
	* gdk-card-image.h: Redsigned to use gdk objects, now offers a
 	gtknotebook page for selecting card preferences.
	* gdk-card-image.c: Substantially rewritten.
	* Makefile.am: updated for new image arrangement.
	* *.png: png based images to replace xpm.
	
Mon Oct 26 Felix Bellaby <felix@pooh.u-net.com>
	* gdk-card-image.h (gdk_card_image_unref): frees X server refs.
	* gdk-card-image.h (gdk_card_image_back): returns a card back image.