@@ -1,3 +1,8 @@
+2002-07-04  Ross Burton  <ross@burtonini.com>
+
+	* gdk-card-image.c: Bad hacky mojo to fix building on OSF/1
+	(closes #77903).
+
 2002-06-05  Bastien Nocera  <hadess@hadess.net>
 
 	* gdk-card-image.c: (gdk_card_deck_dir_search),
